# Win32-security

./: CHANGELOG.md  Win32-security.cabal
cbits/: Win32Security.c  Win32Security.h
src/System/Win32/Security/: AccessControl.hsc  Helpers.hs  MarshalText.hs  SecurityDescriptor.hsc  SecurityInfo.hsc  Sid.hsc  Sspi.hs
src/System/Win32/Security/Sspi/: Internal.hsc
tests/file-security/: Main.hs
tests/get-process-sid/: Main.hs
tests/sid-lookup/: Main.hs
