name:             Win32-security
version:          1.0
synopsis:         Haskell bindings to a security-related functions of the Windows API
license:          MIT
license-file:     LICENSE
author:           Anton Dessiatov
maintainer:       anton.dessiatov@gmail.com
copyright:        Anton Dessiatov,
category:         System
build-type:       Simple
cabal-version:    >=1.16
homepage:         https://github.com/anton-dessiatov/Win32-security
bug-reports:      https://github.com/anton-dessiatov/Win32-security/issues

Flag build-tests
    Description:
        Build all the little test executables
    Default:
        False

library
  default-language: Haskell2010
  build-depends:
      base >= 4 && < 5
    , text >= 1
    , Win32 >= 2
    , Win32-errors >= 0.2.1
  exposed-modules:
      System.Win32.Security.Sid
  other-modules:
      System.Win32.Security.MarshalText
  hs-source-dirs: src
  if os(windows) && arch(i386)
    cpp-options: "-DWINDOWS_CCONV=stdcall"
  else
    cpp-options: "-DWINDOWS_CCONV=ccall"

executable win32-security-sid-lookup
  default-language: Haskell2010
  hs-source-dirs: tests/sid-lookup
  main-is: Main.hs
  if flag (build-tests)
    buildable: True
    build-depends:
        base
      , text
      , Win32-security
  else
    buildable: False
