name:             Win32-security
version:          0.2
synopsis:         Haskell bindings to a security-related functions of the Windows API
license:          MIT
license-file:     LICENSE
author:           Anton Dessiatov
maintainer:       anton.dessiatov@gmail.com
copyright:        Anton Dessiatov, 2015
category:         System
build-type:       Simple
cabal-version:    >=1.16
homepage:         https://github.com/anton-dessiatov/Win32-security
bug-reports:      https://github.com/anton-dessiatov/Win32-security/issues
description:
    This package contains bindings for security-related functions of the Windows API.
    Main features are:
      * Account name/SID lookup
      * Editing securable objects access control lists
      * SSPI functions

Flag build-tests
    Description:
        Build all the little test executables
    Default:
        False

library
  default-language: Haskell2010
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10
    , resourcet >= 1.1
    , text >= 1
    , transformers >= 0.4
    , Win32 >= 2
    , Win32-cryptography >= 0.1
    , Win32-errors >= 0.2.1
  exposed-modules:
      System.Win32.Security.AccessControl
      System.Win32.Security.Sid
      System.Win32.Security.SecurityInfo
      System.Win32.Security.Sspi
  other-modules:
      System.Win32.Security.Helpers
      System.Win32.Security.Sspi.Internal
  hs-source-dirs: src
  include-dirs: cbits
  extra-libraries: secur32
  cpp-options: "-D_WIN32_WINNT=0x0601"
  c-sources:
    cbits/Win32Security.c
  if os(windows) && arch(i386)
    cpp-options: "-DWINDOWS_CCONV=stdcall"
  else
    cpp-options: "-DWINDOWS_CCONV=ccall"

executable win32-security-sid-lookup
  default-language: Haskell2010
  hs-source-dirs: tests/sid-lookup
  main-is: Main.hs
  if flag (build-tests)
    buildable: True
    build-depends:
        base
      , text
      , Win32-security
  else
    buildable: False

executable win32-security-file-security
  default-language: Haskell2010
  hs-source-dirs: tests/file-security
  main-is: Main.hs
  if flag (build-tests)
    buildable: True
    build-depends:
        base
      , text
      , Win32-security
  else
    buildable: False

executable win32-security-get-process-sid
  default-language: Haskell2010
  hs-source-dirs: tests/get-process-sid
  main-is: Main.hs
  if flag (build-tests)
    buildable: True
    build-depends:
        base
      , Win32-security
  else
    buildable: False
